Made some styling fixes and improved css readability

--- a/src/client/stylesheets/components/_sidebar.scss
+++ b/src/client/stylesheets/components/_sidebar.scss
@@ -418,6 +418,7 @@ $icons: '../icons/';
             background-position: center;
 
             &.workingstep, &.workplan, &.selective {
+                background-image: none;
                 background-color: #333;
                 color: #fff;
                 padding: 5px;
@@ -434,49 +435,48 @@ $icons: '../icons/';
                     content: 'S';
                 }
             }
-        }
 
-        .tolerance-angularity {
-            background-image: url($icons + 'tolerance/angularity.svg');
-        }
-        .tolerance-circular-runout {
-            background-image: url($icons + 'tolerance/circular_runout.svg');
-        }
-        .tolerance-circularity {
-            background-image: url($icons + 'tolerance/circularity.svg');
-        }
-        .tolerance-concentricity {
-            background-image: url($icons + 'tolerance/concentricity.svg');
-        }
-        .tolerance-cylindricity {
-            background-image: url($icons + 'tolerance/cylindricity.svg');
-        }
-        .tolerance-flatness {
-            background-image: url($icons + 'tolerance/flatness.svg');
-        }
-        .tolerance-parallelism {
-            background-image: url($icons + 'tolerance/parallelism.svg');
-        }
-        .tolerance-perpendicularity {
-            background-image: url($icons + 'tolerance/perpendicularity.svg');
-        }
-        .tolerance-position {
-            background-image: url($icons + 'tolerance/position.svg');
-        }
-        .tolerance-profile-line {
-            background-image: url($icons + 'tolerance/profile_line.svg');
-        }
-        .tolerance-profile-surface {
-            background-image: url($icons + 'tolerance/profile_surface.svg');
-        }
-        .tolerance-straightness {
-            background-image: url($icons + 'tolerance/straightness.svg');
-        }
-        .tolerance-symmetry {
-            background-image: url($icons + 'tolerance/symmetry.svg');
-        }
-        .tolerance-total-runout {
-            background-image: url($icons + 'tolerance/total_runout.svg');
+            &.tolerance {
+                &.angularity {
+                    background-image: url($icons + 'tolerance/angularity.svg');
+                }
+                &.circularity {
+                    background-image: url($icons + 'tolerance/circularity.svg');
+                }
+                &.concentricity {
+                    background-image: url($icons + 'tolerance/concentricity.svg');
+                }
+                &.cylindricity {
+                    background-image: url($icons + 'tolerance/cylindricity.svg');
+                }
+                &.flatness {
+                    background-image: url($icons + 'tolerance/flatness.svg');
+                }
+                &.parallelism {
+                    background-image: url($icons + 'tolerance/parallelism.svg');
+                }
+                &.perpendicularity {
+                    background-image: url($icons + 'tolerance/perpendicularity.svg');
+                }
+                &.position {
+                    background-image: url($icons + 'tolerance/position.svg');
+                }
+                &.profile-line {
+                    background-image: url($icons + 'tolerance/profile_line.svg');
+                }
+                &.profile-surface {
+                    background-image: url($icons + 'tolerance/profile_surface.svg');
+                }
+                &.straightness {
+                    background-image: url($icons + 'tolerance/straightness.svg');
+                }
+                &.symmetry {
+                    background-image: url($icons + 'tolerance/symmetry.svg');
+                }
+                &.total-runout {
+                    background-image: url($icons + 'tolerance/total_runout.svg');
+                }
+            }
         }
 
         &.visible {
